# overflow

./: Makefile  README.md  go.mod  main.go  overflow.cabal  payload.shell
.github/workflows/: test.yml
app/: Main.hs
cmd/: overflow.go
cmd/chars/: chars.go
cmd/exploit/: exploit.go
cmd/fuzz/: fuzz.go
cmd/offset/: offset.go
cmd/pattern/: pattern.go
internal/cli/: cli.go
internal/overflow/: chars.go  chars_test.go  exploit.go  exploit_test.go  fuzz.go  offset.go  offset_test.go  overflow.go  overflow_test.go  pattern.go  pattern_test.go  util.go  util_test.go
src/: Overflow.hs
src/Overflow/: BadChars.hs  Exploit.hs  Fuzz.hs  Pattern.hs
